Fixed white space around signup page  background photo

--- a/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -1,15 +1,25 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing:border-box;
+}
 
+html, body {
+  height: 100%;
+}
   
   .container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('../assets/background-images/ivorytower.jpeg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
+    background-attachment: fixed; 
+    padding: 20px;
 }
   
   
@@ -20,6 +30,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
+    margin: 20px;
   }
   
   .logo {
